<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">

    <item android:id="@+id/action_home"
        android:title="@string/home_menu"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_stay"
        android:title="@string/hotels"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_eat"
        android:title="@string/restaurants"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_go"
        android:title="@string/places"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_map"
        android:title="Map"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/settings_action"
        android:orderInCategory="100"
        app:showAsAction="never" />


    <item android:id="@+id/action_buscar"
        android:title="@string/search_action"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

</menu>